// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulMenu > Snapshot tests > vertical menu snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk acss-1691gak css-dev-only-do-not-override-yotw4n css-var-rk delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项1
      </span>
    </li>
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项2
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`DelightfulMenu > Snapshot tests > basic menu snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk acss-1691gak css-dev-only-do-not-override-yotw4n css-var-r3 delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项1
      </span>
    </li>
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项2
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`DelightfulMenu > Snapshot tests > menu with icon snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk acss-1691gak css-dev-only-do-not-override-yotw4n css-var-r8 delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      aria-describedby="test-id"
      class="delightful-menu-item"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-item-icon"
      >
        🏠
      </span>
      <span
        class="delightful-menu-title-content"
      >
        菜单项1
      </span>
    </li>
    <li
      aria-describedby="test-id"
      class="delightful-menu-item"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-item-icon"
      >
        ⚙️
      </span>
      <span
        class="delightful-menu-title-content"
      >
        菜单项2
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`DelightfulMenu > Snapshot tests > menu with submenu snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk acss-1691gak css-dev-only-do-not-override-yotw4n css-var-rd delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="delightful-menu-submenu delightful-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-1-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="delightful-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-1"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="delightful-menu-title-content"
        >
          父菜单
        </span>
        <i
          class="delightful-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`DelightfulMenu > Snapshot tests > menu with custom class snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk custom-menu acss-1691gak css-dev-only-do-not-override-yotw4n css-var-ru delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项1
      </span>
    </li>
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项2
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`DelightfulMenu > Snapshot tests > menu with custom style snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk acss-1691gak css-dev-only-do-not-override-yotw4n css-var-rp delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    style="width: 200px;"
    tabindex="0"
  >
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项1
      </span>
    </li>
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项2
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`DelightfulMenu > Snapshot tests > menu with selected state snapshot 1`] = `
<DocumentFragment>
  <ul
    class="delightful-menu delightful-menu-root delightful-menu-vertical delightful-menu-light acss-sgfakk acss-1691gak css-dev-only-do-not-override-yotw4n css-var-rf delightful-menu-css-var"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-selected delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项1
      </span>
    </li>
    <li
      aria-describedby="test-id"
      class="delightful-menu-item delightful-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="delightful-menu-title-content"
      >
        菜单项2
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</DocumentFragment>
`;
